fixed sizing of thumbnails - stretch

--- a/literaryHalifax/www/css/style.css
+++ b/literaryHalifax/www/css/style.css
@@ -142,6 +142,7 @@ overscroll-pane {
 
 .list-item-thumb {
     width:75px;
+    height:50px;
     margin:4px 4px 4px 0px;
 }
 
